Ajustando funcionalidades e cores tbm.

--- a/HistoricoDeResultados/index.html
+++ b/HistoricoDeResultados/index.html
@@ -6,17 +6,18 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #ffffff; /* Fundo amarelo */
             padding: 20px;
             display: flex;
             flex-direction: column;
             align-items: center;
             margin: 0;
+            color: #000000; /* Texto branco */
         }
 
         /* Cabeçalho fixo no topo da página */
         .container-fixed {
-            background-color: white;
+            background-color: #ffffff; /* Fundo branco */
             padding: 15px;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -46,7 +47,8 @@
             border: 1px solid #ccc; /* Borda ao redor dos resultados */
             padding: 10px;
             border-radius: 8px;
-            background-color: #fff; /* Fundo branco para os resultados */
+            background-color: #ffffff; /* Fundo branco para os resultados */
+            color: #333; /* Texto escuro */
         }
 
         /* Título de cada resultado */
@@ -79,15 +81,15 @@
 
         /* Destaque para os números sorteados */
         .highlight {
-            background-color: #930089; /* Fundo roxo para números sorteados */
+            background-color: #D1B513; /* Fundo roxo para números sorteados */
             color: white;
-            border-color: #930089; /* Altera a borda para combinar com o fundo */
+            border-color: #D1B513; /* Altera a borda para combinar com o fundo */
         }
 
         /* Estilo do botão */
         button {
             padding: 8px 16px;
-            background-color: #930089;
+            background-color: #D1B513;
             color: white;
             border: none;
             border-radius: 4px;
@@ -96,7 +98,7 @@
         }
 
         button:hover {
-            background-color: #6b0063;
+            background-color: #D1B513;
         }
 
         /* Responsividade para telas menores */
