--- a/HistoricoDeResultados/index2.html
+++ b/HistoricoDeResultados/index2.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -13,11 +12,11 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: #f4f4f9;
+            background-color: #f4f4f9; /* Fundo claro */
         }
         header {
-            background-color: #007bff;
-            color: #fff;
+            background-color: #D1B513; /* Cor dourada */
+            color: #ffffff; /* Texto branco */
             padding: 1rem;
             text-align: center;
             width: 100%;
@@ -32,19 +31,19 @@
             margin: 10px 0;
         }
         button {
-            background-color: #007bff;
-            color: #fff;
+            background-color: #D1B513; /* Cor dourada */
+            color: #ffffff; /* Texto branco */
             border: none;
             padding: 10px 20px;
             cursor: pointer;
             border-radius: 5px;
         }
         button:hover {
-            background-color: #0056b3;
+            background-color: #C39B11; /* Tom mais escuro para o hover */
         }
         .result {
             margin-top: 20px;
-            background-color: #fff;
+            background-color: #ffffff;
             border: 1px solid #ddd;
             padding: 15px;
             border-radius: 5px;
@@ -54,27 +53,27 @@
             overflow-x: auto;
             white-space: pre-wrap;
             word-wrap: break-word;
-            font-family: Arial, sans-serif; /* Fonte Arial */
-            font-size: 16px; /* Tamanho da fonte 16px */
-            text-align: center; /* Centraliza o texto dentro do campo */
+            font-family: Arial, sans-serif;
+            font-size: 16px;
+            text-align: center;
             max-width: 100%;
             margin: 0 auto;
-            background-color: #f9f9f9; /* Fundo claro para o campo de texto */
+            background-color: #f9f9f9;
             padding: 10px;
             border-radius: 5px;
             border: 1px solid #ddd;
-            width: 80%; /* Ajusta a largura para que fique centralizado */
+            width: 80%;
         }
         .centralizado {
             text-align: center;
             font-size: 12px;
-            color: blue;
+            color: #D1B513; /* Cor dourada */
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Gerador de Combinações para Mega-Sena</h1>
+        <h1>Gerador de Combinações para Dia de Sorte</h1>
     </header>
 
     <div class="centralizado">
@@ -82,10 +81,10 @@
     </div>
 
     <main>
-        <label for="dezenas">Escolha a quantidade de dezenas (6 a 20):</label>
+        <label for="dezenas">Escolha a quantidade de dezenas (7 a 15):</label>
         <select id="dezenas">
             <script>
-                for (let i = 6; i <= 20; i++) {
+                for (let i = 7; i <= 15; i++) {
                     document.write(`<option value="${i}">${i} dezenas</option>`);
                 }
             </script>
@@ -96,21 +95,15 @@
     </main>
     <script>
         const tabela = [
-            { dezenas: 6, custo: 5.00, sena: 50063860, quina: 154518, quadra: 2332 },
-            { dezenas: 7, custo: 35.00, sena: 7151980, quina: 44981, quadra: 1038 },
-            { dezenas: 8, custo: 140.00, sena: 1787995, quina: 17192, quadra: 539 },
-            { dezenas: 9, custo: 420.00, sena: 595998, quina: 7791, quadra: 312 },
-            { dezenas: 10, custo: 1050.00, sena: 238399, quina: 3973, quadra: 195 },
-            { dezenas: 11, custo: 2310.00, sena: 108363, quina: 2211, quadra: 129 },
-            { dezenas: 12, custo: 4620.00, sena: 54182, quina: 1317, quadra: 90 },
-            { dezenas: 13, custo: 8580.00, sena: 29175, quina: 828, quadra: 65 },
-            { dezenas: 14, custo: 15015.00, sena: 16671, quina: 544, quadra: 48 },
-            { dezenas: 15, custo: 25025.00, sena: 10003, quina: 370, quadra: 37 },
-            { dezenas: 16, custo: 40040.00, sena: 6252, quina: 260, quadra: 29 },
-            { dezenas: 17, custo: 61880.00, sena: 4045, quina: 188, quadra: 23 },
-            { dezenas: 18, custo: 92820.00, sena: 2697, quina: 139, quadra: 19 },
-            { dezenas: 19, custo: 135660.00, sena: 1845, quina: 105, quadra: 16 },
-            { dezenas: 20, custo: 193800.00, sena: 1292, quina: 81, quadra: 13 }
+            { dezenas: 7, custo: 2.50, sena: 2629575, quina: 15652, quadra: 453, mes: 12 },
+            { dezenas: 8, custo: 20.00, sena: 328696, quina: 4083, quadra: 185, mes: 12 },
+            { dezenas: 9, custo: 90.00, sena: 73043, quina: 1422, quadra: 90, mes: 12 },
+            { dezenas: 10, custo: 300.00, sena: 21913, quina: 596, quadra: 49, mes: 12 },
+            { dezenas: 11, custo: 825.00, sena: 7968, quina: 284, quadra: 29, mes: 12 },
+            { dezenas: 12, custo: 1980.00, sena: 3320, quina: 149, quadra: 19, mes: 12 },
+            { dezenas: 13, custo: 4290.00, sena: 1532, quina: 85, quadra: 13, mes: 12 },
+            { dezenas: 14, custo: 8580.00, sena: 766, quina: 51, quadra: 9, mes: 12 },
+            { dezenas: 15, custo: 16087.50, sena: 408, quina: 32, quadra: 7, mes: 12 }
         ];
 
         document.getElementById('gerar').addEventListener('click', async () => {
@@ -162,7 +155,7 @@
 
         async function getConcursosRealizados() {
             try {
-                const response = await fetch('https://api.guidi.dev.br/loteria/megasena/ultimo');
+                const response = await fetch('https://api.guidi.dev.br/loteria/diadesorte/ultimo');
                 if (!response.ok) {
                     console.error(`Erro na resposta da API: ${response.status}`);
                     return null;
@@ -188,9 +181,10 @@
             for (let i = 0; i < quantidade; i++) {
                 let combinacao = new Set();
                 while (combinacao.size < dezenas) {
-                    combinacao.add(Math.floor(Math.random() * 60) + 1); // Números de 1 a 60
+                    combinacao.add(Math.floor(Math.random() * 31) + 1); // Números de 1 a 31
                 }
-                combinacoes.push([...combinacao].sort((a, b) => a - b).join(' ')); // Ordena e junta em uma string
+                const mes = Math.floor(Math.random() * 12) + 1; // Mês de 1 a 12
+                combinacoes.push([...combinacao].sort((a, b) => a - b).join(' ') + ` | Mês: ${mes}`); // Ordena e junta em uma string
             }
             return combinacoes;
         }
