Atualizado outros recursos sobre esta modalidade

--- a/HistoricoDeResultados/index2.html
+++ b/HistoricoDeResultados/index2.html
@@ -67,8 +67,9 @@
         .centralizado {
             text-align: center;
             font-size: 12px;
-            color: #D1B513; /* Cor dourada */
+            color: blue;
         }
+
     </style>
 </head>
 <body>
