--- a/HistoricoDeResultados/index3.html
+++ b/HistoricoDeResultados/index3.html
@@ -69,11 +69,12 @@
             font-size: 18px;
             color: #32CD32;
         }
-        .centralizado{
+        .centralizado {
             text-align: center;
             font-size: 12px;
-            color: #D1B513; /* Cor dourada para o texto */
+            color: blue;
         }
+
     </style>
 </head>
 <body>
