--- a/HistoricoDeResultados/index5.html
+++ b/HistoricoDeResultados/index5.html
@@ -28,11 +28,11 @@
         th, td {
             padding: 10px;
             text-align: center;
-            border: 1px solid #D1B513; /* Alterado para #D1B513 */
+            border: 1px solid #4CAF50;
         }
         th {
-            background-color: #D1B513; /* Alterado para #D1B513 */
-            color: white;
+            background-color: #D1B513; /* Cor dourada no cabeçalho */
+            color: white; /* Texto branco no cabeçalho */
         }
         tr:nth-child(even) {
             background-color: #F9F9F9;
