Ajustando e colocando mais funcionalidades

--- a/HistoricoDeResultados/index1b-Testando.html
+++ b/HistoricoDeResultados/index1b-Testando.html
@@ -175,7 +175,7 @@
     <script>
 let currentConcurso = 1;
         let isLoading = false;
-        let maxConcurso = 3000; //Limita o numero de pesquisa em relação ao concursos sorteados
+        let maxConcurso = 750;
         let globalStats = {
             numbers: Array(31).fill(0),
             months: Array(12).fill(0),
